--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,29 +1,28 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="ru">
-<head>    
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% include 'includes/favicon.html' %}
-  <meta name="msapplication-TileColor" content="#000">
-  <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <title>
-    {% block title %}
-      Тайтла нет 
-    {% endblock %}
-  </title>
-</head>
-<body>
-  <header>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% include 'includes/favicon.html' %}
+    <meta name="msapplication-TileColor" content="#000">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>
+      {% block title %}
+        Тайтла нет 
+      {% endblock %}
+    </title>
+  </head>
+  <body>
     {% include 'includes/header.html' %}
-  </header>
-  <main> 
-    {% block content %}
-      Контент не подвезли :(
-    {% endblock %}
-  </main>
-  <footer class="border-top text-center py-3">
+    <main> 
+        <div class="container">
+          {% block content %}
+            Контент не подвезли :(
+          {% endblock %}
+        </div>
+    </main>
     {% include 'includes/footer.html' %}
-  </footer>
-</body>
+  </body>
+</html>
