--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,52 +1,12 @@
 {% extends 'base.html' %} 
-{% load static %}
-<!DOCTYPE html>
-<html lang="ru">
-<head>    
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% include 'includes/favicon.html' %}
-  <meta name="msapplication-TileColor" content="#000">
-  <meta name="theme-color" content="#ffffff">
-  <!-- Подключен файл со стандартными стилями бустрап -->
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <title>
-    {% block title %}
-      Записи сообщества {{ group }}
-    {% endblock %}
-  </title>
-</head>
-<body>
-  <header>
-    {% include 'includes/header.html' %}
-  </header>
-  <main>
-    {% block content %}
-      <div class="container">
-        <h1>{{ group }}</h1>
-        <p>
-          {{ group.description }}
-        </p>
-        {% for post in posts %}
-          <article>
-            <ul>
-              <li>
-                Автор: {{ post.author.get_full_name }}
-              </li>
-              <li>
-                Дата публикации: {{ post.pub_date|date:"d E Y" }}
-              </li>
-            </ul>      
-          <p>
-            {{ post.text }}
-          </p>         
-          </article>
-          {% if not forloop.last %}<hr>{% endif %}
-        {% endfor %}
-      </div>  
-      {% endblock %}
-  </main>
-  <footer class="page-footer font-small blue border-top">
-    {% include 'includes/footer.html' %}
-  </footer>
-</body>
+{% block title %}
+  Записи сообщества {{ group }}
+{% endblock %}
+{% include 'includes/header.html' %}
+{% block content %}
+  <h1>{{ group }}</h1>
+  <p>
+    {{ group.description }}
+  </p>
+  {% include 'includes/post.html' %}
+{% endblock %}
