--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,49 +1,11 @@
 {% extends 'base.html' %} 
-{% load static %}
-<!DOCTYPE html>
-<html lang="ru">
-<head>    
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% include 'includes/favicon.html' %}
-  <meta name="msapplication-TileColor" content="#000">
-  <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <title>
-    {% block title %}
-      Последние обновления на сайте
-    {% endblock %}
-  </title>
-</head>
-<body>
-  <header>
-    {% include 'includes/header.html' %}
-  </header>
-  <main> 
-    {% block content %}
-    <div class="container">     
-      <h1>{{ text }}</h1>
-      {% for post in posts %}
-        <article>
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>
-        <p>{{ post.text }}</p>    
-        {% if post.group %}   
-          <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-        {% endif %}
-        </article>
-        {% if not forloop.last %}<hr>{% endif %}
-      {% endfor %} 
-    </div> 
-    {% endblock %} 
-  </main>
-  <footer class="border-top text-center py-3">
-    {% include 'includes/footer.html' %}
-  </footer>
-</body>
+{% block title %}
+  {{ text }}
+{% endblock %}
+{% include 'includes/header.html' %}
+{% block content %}
+  <h1>
+    {{ text }}
+  </h1>
+  {% include 'includes/post.html' with have_link=True %}
+{% endblock %}
