Fix pytest failed

--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -8,5 +8,8 @@
   <p>
     {{ group.description }}
   </p>
-  {% include 'includes/post.html' %}
+  {% for post in posts %}
+    {% include 'includes/post.html' %}
+  {% if not forloop.last %}<hr>{% endif %}
+  {% endfor %}
 {% endblock %}
