--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,5 +7,8 @@
   <h1>
     {{ text }}
   </h1>
-  {% include 'includes/post.html' with have_link=True %}
+  {% for post in posts %}
+    {% include 'includes/post.html' with have_link=True %}
+  {% if not forloop.last %}<hr>{% endif %}
+  {% endfor %}
 {% endblock %}
