--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -17,11 +17,11 @@
   <body>
     {% include 'includes/header.html' %}
     <main> 
-        <div class="container">
-          {% block content %}
-            Контент не подвезли :(
-          {% endblock %}
-        </div>
+      <div class="container py-5">
+        {% block content %}
+          Контент не подвезли :(
+        {% endblock %}
+      </div>
     </main>
     {% include 'includes/footer.html' %}
   </body>
