--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %} 
 {% block title %}
-  {{ text }}
+  Последние обновления на сайте
 {% endblock %}
 {% include 'includes/header.html' %}
 {% block content %}
   <h1>
-    {{ text }}
+    Последние обновления на сайте
   </h1>
   {% for post in posts %}
     {% include 'includes/post.html' with have_link=True %}
